# Sistema-de-gestion-de-pokemons

./: README.md  pyproject.toml  requirements.txt
adb/: __init__.py  client.py
app/: __init__.py  main.py
config/: __init__.py  defaults.py  manager.py  schema.py
core/: __init__.py  constants.py
database/: __init__.py  engine.py  repository.py
exports/: __init__.py
models/: __init__.py  pokemon.py
ocr/: __init__.py  engine.py
pokemon_go_box_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rules/: __init__.py  parser.py
scanner/: __init__.py  box_scanner.py  test_scan.py
ui/: __init__.py  app.py  pokemon_list_dialog.py  settings_dialog.py
utils/: __init__.py  logging.py  paths.py
vision/: __init__.py
